--- a/src/styles/globals/_topbar.css
+++ b/src/styles/globals/_topbar.css
@@ -183,7 +183,7 @@
     }
 
     .topbar__actions-link .icon {
-        --icon-size: var(--font-size-ms);
+        --icon-size: var(--font-size-m);
     }
 
     .topbar__actions {
